[package]
name = "agent-switch"
version = "0.1.0"
edition = "2024"

[features]
default = []
niri = ["gtk4", "gtk4-layer-shell", "niri-ipc", "shellexpand"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
notify = "8"
time = { version = "0.3", features = ["parsing", "formatting"] }
toml = "0.9"
shellexpand = { version = "3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { version = "0.10", optional = true }
gtk4-layer-shell = { version = "0.7", optional = true }
niri-ipc = { version = "=25.11.0", optional = true }

[profile.release]
opt-level = "z"
lto = true
strip = true
